# Neuro-probabilistic-risk-deep-learning

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-neuro-risk.txt
.github/workflows/: ci.yml  deploy-jsviz-pages.yml
.jupyter/: jupyter_lab_config.py
data/processed/neuro_risk_placeholder/: test.npz  train.npz  validation.npz
docs/: architecture.md  responsible_use.md
jsviz/: index.html  main.js  package-lock.json  package.json
jsviz/public/: latest_inference.json
notebooks/: neuro_risk_research_prototype.ipynb
scripts/: check_stack.py  common_env.sh  infer_neuro_risk.py  open_vscode.sh  register_kernel.sh  run_neuro_risk_mvp.py  start_jupyter.sh  validate_workspace.sh
src/neuro_risk/: __init__.py  config.py  workflow.py
src/neuro_risk/data/: __init__.py  datasets.py  synthetic.py
src/neuro_risk/evaluation/: __init__.py  metrics.py
src/neuro_risk/inference/: __init__.py  mc_dropout.py
src/neuro_risk/models/: __init__.py  backbones.py  classifier.py  fusion.py
src/neuro_risk/training/: __init__.py  calibration.py  engine.py
src/neuro_risk/utils/: __init__.py  io.py  repro.py
src/neuro_risk/viz/: __init__.py  plots.py
tests/: test_neuro_risk_core.py
